Fix layout issue on pages

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -93,7 +93,7 @@ nb-layout {
 }
 
 .workbench-container {
-  height: calc(100vh - 5rem - 4rem);
+  // height: calc(100vh - 5rem - 4rem);
   padding: 0px 0px 0px 0px !important;
   margin: 0px !important;
   width: 100%;
