--- a/src/app/swimlane/swimlane-dashboard/swimlane-dashboard.component.scss
+++ b/src/app/swimlane/swimlane-dashboard/swimlane-dashboard.component.scss
@@ -1,10 +1,12 @@
 .card-window {
-  height: 94% !important;
+  display: flex;
+  height: 100%;
+  padding: var(--layout-padding);
 }
 
 .swimlane-window-card {
-  height: inherit !important;
-  padding: 0px !important;
+  height: 100% !important;
+  width: 100% !important;
 }
 
 .diagram {
